unpackaged/main/default/objects/breadwinner_ns__BW_Credit_Memo__c/breadwinner_ns__BW_Credit_Memo__c.object-meta.xml
<CustomObject>
    <label>NetSuite Credit Memo</label>
    <nameField>
        <label>Credit #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Credit Memos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>