unpackaged/main/default/objects/breadwinner_ns__BW_Credit_Memo__c/fields/breadwinner_ns__HandlingCost__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__HandlingCost__c</fullName>
    <label>Handling Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>