unpackaged/main/default/objects/breadwinner_ns__BW_Credit_Memo__c/fields/breadwinner_ns__LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__LastModifiedDate__c</fullName>
    <label>Last Modified Date in NetSuite</label>
    <type>DateTime</type>
</CustomField>