unpackaged/main/default/objects/breadwinner_ns__BW_Credit_Memo__c/fields/breadwinner_ns__RefundCheck__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__RefundCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Check</label>
    <type>Checkbox</type>
</CustomField>