unpackaged/main/default/objects/breadwinner_ns__BW_Credit_Memo__c/fields/breadwinner_ns__Unapplied__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Unapplied__c</fullName>
    <label>Unapplied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>